[package]
name = "chmlfrp-cli"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "chml"
path = "src/main.rs"

[dependencies]
clap = "4.5.40"
colored = "3.0.0"
flate2 = "1.1.2"
futures-util = "0.3.31"
indicatif = "0.17.11"
inquire = "0.7.5"
lazy_static = "1.5.0"
reqwest = { version="0.12.22", features=["json", "stream", "blocking"] }
serde = { version="1.0.219", features=["derive"] }
serde_json = "1.0.140"
tar = "0.4.44"
tokio = { version="1.46.0", features=["full"] }
zip = "4.2.0"
